Remove redundant `.align*` styles from the `/blocks` folder. Fixes: https://github.com/justintadlock/mythic/issues/54
Props @m-e-h

--- a/resources/scss/blocks/core/_cover-image.scss
+++ b/resources/scss/blocks/core/_cover-image.scss
@@ -51,13 +51,6 @@
 	&.has-right-content {
 		justify-content: flex-end;
 	}
-
-	// Floated left/right element.
-	&.alignleft,
-	&.alignright {
-		max-width: content-width() / 2;
-		width:     100%;
-	}
 }
 
 // Paragraph of text shown within the cover image element.
