--- a/resources/scss/blocks/core/_image.scss
+++ b/resources/scss/blocks/core/_image.scss
@@ -14,13 +14,6 @@
 		max-width: 100%;
 	}
 
-	&.aligncenter {
-		display:      block;
-		margin-left:  auto;
-		margin-right: auto;
-		text-align:   center;
-	}
-
 	&.is-resized {
 		width: min-content;
 
