--- a/resources/scss/blocks/core/_latest-posts.scss
+++ b/resources/scss/blocks/core/_latest-posts.scss
@@ -8,14 +8,6 @@
 
 .wp-block-latest-posts {
 
-	&.alignleft {
-		margin-right: 2em;
-	}
-
-	&.alignright {
-		margin-left: 2em;
-	}
-
 	&.is-grid {
 		display:    flex;
 		flex-wrap:  wrap;
