--- a/resources/scss/blocks/core/_pullquote.scss
+++ b/resources/scss/blocks/core/_pullquote.scss
@@ -10,11 +10,6 @@
 	padding:    3em 0;
 	text-align: center;
 
-	&.alignleft,
-	&.alignright {
-		max-width: content-width() / 2;
-	}
-
 	cite,
 	footer {
 		position: relative;
