--- a/resources/scss/utilities/_alignment.scss
+++ b/resources/scss/utilities/_alignment.scss
@@ -32,6 +32,7 @@
 	display:      block;
 	margin-left:  auto;
 	margin-right: auto;
+	text-align:   center;
 	clear:        both;
 }
 
